# readsb

./: CMakeLists.txt  Makefile  build.zig  net_io.h
CMake/Modules/: GetGitRevisionDescription.cmake
extras/minilzo/: CMakeLists.txt
extras/uat2esnt/: CMakeLists.txt
inc/: CMakeLists.txt  readsb.h
src/: CMakeLists.txt  readsb.c  receiver.c
